add api functionality for average speed and limit number of runs
